Bug fix: image-frame was broken on small screens.

--- a/css/tzLab.css
+++ b/css/tzLab.css
@@ -134,18 +134,9 @@ footer:after {
  * --------------------------------- */
 
 .image-frame {
-  margin: 16px;
-  padding: 16px;
+  margin-top: 16px;
+  padding: 8px;
   box-shadow: 3px 3px 4px #000;
   border: 2px solid #ccc;
-}
-
-/* **************************************** */
-
-#bottomMenu {
-  position:fixed; bottom:0; left:0; right:0; display:none;
-}
-
-#bottomMenu:hover {
-  display:block;
+  max-width: 96%;
 }
